--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
-<html lang="zh-Hans">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Melaozhu's JavaScript 30</title>
+  <title>JavaScript 30</title>
+  <meta name="renderer" content="webkit">
+  <meta name="force-rendering" content="webkit">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Cache-Control" content="no-transform">
+  <meta name="robots" content="index,follow">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="application-name" content="JavaScript 30">
+  <meta name="description" content="Melaozhu's JavaScript 30 Chanlleges.">
+  <meta name="theme-color" content="#e4b433">
+  <meta name="author" content="Ritchie Zhu">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png">
 </head>
 
 <body>
-  <h1>JavaScript Drum Kit</h1>
+  <h1>JavaScript 30</h1>
+  <p>Melaozhu's JavaScript 30 Chanlleges.</p>
   <ol>
     <li><a href="./01.javaScript-drum-klit">JavaScript Drum Kit</a></li>
     <li><a href="./02.css-js-clock">CSS + JS Clock</a></li>
