--- a/02.css-js-clock/index.html
+++ b/02.css-js-clock/index.html
@@ -1,10 +1,25 @@
-<html lang="zh-Hans">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CSS + JS Clock</title>
+  <meta name="renderer" content="webkit">
+  <meta name="force-rendering" content="webkit">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Cache-Control" content="no-transform">
+  <meta name="robots" content="index,follow">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="application-name" content="CSS + JS Clock">
+  <meta name="description" content="Melaozhu's JavaScript 30 Chanlleges.">
+  <meta name="theme-color" content="#e4b433">
+  <meta name="author" content="Ritchie Zhu">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png">
+  <link rel="preload" href="./css/main.css" as="style">
+  <link rel="preload" href="./js/main.js" as="script">
+  <link rel="stylesheet" href="./css/main.css">
+  <script defer src="./js/main.js"></script>
 </head>
 
 <body>
