Complete CSS + JS Clock chanllege

--- a/02.css-js-clock/index.html
+++ b/02.css-js-clock/index.html
@@ -23,8 +23,13 @@
 </head>
 
 <body>
-  <h1>CSS + JS Clock</h1>
-  <p>Under construction...</p>
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
+    </div>
+  </div>
 </body>
 
 </html>
