Arrange project structure

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <h1>JavaScript 30</h1>
   <p>Melaozhu's JavaScript 30 Chanlleges.</p>
   <ol>
-    <li><a href="./01.javaScript-drum-klit">JavaScript Drum Kit</a></li>
-    <li><a href="./02.css-js-clock">CSS + JS Clock</a></li>
+    <li><a href="./01 - javaScript-drum-klit">JavaScript Drum Kit</a></li>
+    <li><a href="./02 - css-js-clock">CSS + JS Clock</a></li>
   </ol>
 </body>
 
